# agile_bots

./: .cursorignore  .gitignore  ASYNC_SAVE_LOGGING.md  COMPREHENSIVE_JS_VALIDATION_REPORT.md  LICENSE-COMMERCIAL.md  README.md  VERIFY_PANEL_CHANGES.md  activity_log.json  analyze_scenarios_agile_bots.py  auto_fix_tests.js  batch_update_remaining_tests.js  behavior_action_state.json  check_filter_scope.py  check_full_depth.py  check_scenario_test_methods.py  check_story_tests.py  clean_invalid_test_files.py  count_test_links.py  duplication_scanner_restore.py  find_orphan_test_links.py  fix_get_help_test_file.py  fix_nested_subepic_test_files.py  fix_remaining_tests.js  fix_story_test_files.py  full_test_results.txt  inspect_story_structure.py  js_validation_report.txt  panel_test_results.txt  panel_test_results_fixed.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scenario_violations.json  scope.json  setup.cfg  show_get_help_stories.py  show_subepic_structure.py  simplify_tests.js  temp_render.py  (+32 more)
base_actions/clarify/: action_config.json
base_actions/strategy/: action_config.json
bots/story_bot/: bot_config.json  input.txt  test-output-final.json  test-output.json  test-output2.json  test-output3.json  test-output4.json  test-output5.json  test-output6.json  test-output7.json  test-output8.json
docs/crc/: crc-class-diagram.mmd  crc-design-model.md  crc-model-description.md  crc-model-diagram.mmd  crc-model-outline copy.md  crc-model-outline.md  panel_cli_walkthroughs.md
docs/plans/: Kaban.drawio  migration-status.md  optimistic-panel-updates-plan.md  test-reorganization-plan.md
docs/stories/: .story-graph-panel-edit-time  domain-model.md  edit-story-exploration.md  edit-story-graph-exploration.md  perform-action-crc-summary.md  perform-action-domain-concepts.json  perform-action-exploration.md  story-ac-story-graph.txt  story-graph.json  story-graph.json.backup  story-graph.json.backup2  story-map-explored-{scope}.drawio  story-map-increments-manage-storyGraph.txt  story-map-increments.drawio  story-map-outline.drawio  story-map.md  story-map.txt  strategy.json  📄 Submit Determined Behavior For Selected Story Node BACKUP.md
src/: utils.py
src/actions/: action.py  actions.py  activity_tracker.py  json_actions.py  markdown_action.py  markdown_actions.py  tty_action.py  tty_actions.py
src/behaviors/: behavior.py  json_behavior.py  markdown_behavior.py  tty_behavior.py
src/bot/: behavior.py  bot.py  json_bot.py  markdown_bot.py  tty_bot (1).py  tty_bot.py  workspace.py
src/bot_path/: bot_path.py  json_bot_path.py  markdown_bot_path.py  tty_bot_path.py
src/cli/: action_data_collector.py  adapter_factory.py  adapters.py  base_hierarchical_adapter.py  cli_generator.py  cli_main.py  cli_session.py  description_extractor.py
src/exit_result/: json_exit_result.py  markdown_exit_result.py  tty_exit_result.py
src/ext/: behavior_matcher.py  bot_matcher.py  trigger_router_entry.py
src/help/: help_action.py  json_help.py  markdown_help.py  tty_help.py
src/instructions/: instructions.py  json_instructions.py  markdown_instructions.py  tty_instructions.py
src/navigation/: domain_navigator.py  json_navigation.py  markdown_navigation.py  tty_navigation.py
src/panel/: LICENSE  behaviors_view.js  bot_header_view.js  bot_panel.js  bot_view.js  dom_state.js  instructions_view.js  package-lock.json  package.json  panel_bump_and_install.ps1  panel_bump_and_install.sh  panel_view.js  paths_section.js  scope_view.js  status_indicator.js  story_map_view.js
src/rules/: rule.py  rules.py  rules_action.py  scan_config.py
src/scanners/: __init__.py  abstraction_levels_scanner.py  ac_consolidation_scanner.py  active_language_scanner.py  actor_alternation_scanner.py  (+122 more)
(+961 files in other folders)
