[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile_bots"
version = "0.1.0"
description = "Agile development bots with behavior-driven workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agile By Design"},
]
keywords = ["agile", "bots", "automation", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "fastmcp>=0.2.0",  # MCP server support
    "nltk>=3.8.0",     # Natural language processing for code scanners
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-watch>=4.2.0",
    "pytest-cov>=4.0.0",
]
gui = [
    "pyperclip>=1.8.2",
    "pyautogui>=0.9.54",
]

[project.urls]
Homepage = "https://github.com/agilebydesign/agile_bots"
Repository = "https://github.com/agilebydesign/agile_bots"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src", "test"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.basedpyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"